--- a/ConvNet.ipynb
+++ b/ConvNet.ipynb
@@ -7470,7 +7470,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 4,
    "metadata": {
     "collapsed": false,
     "deletable": true,
@@ -7490,7 +7490,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 6,
    "metadata": {
     "collapsed": false,
     "deletable": true,
@@ -7501,43 +7501,50 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Tensor(\"conv2d_4/Relu:0\", shape=(246, 128, 128, 28), dtype=float32)\n",
-      "Tensor(\"max_pooling2d_4/MaxPool:0\", shape=(246, 64, 64, 28), dtype=float32)\n",
+      "Tensor(\"Reshape_1:0\", shape=(246, 128, 128, 3), dtype=float32)\n",
       "                          || ||                             \n",
       "                          \\\\ //                             \n",
       "                           \\ /                             \n",
-      "Tensor(\"conv2d_5/Relu:0\", shape=(246, 64, 64, 24), dtype=float32)\n",
-      "Tensor(\"max_pooling2d_5/MaxPool:0\", shape=(246, 32, 32, 24), dtype=float32)\n",
+      "Tensor(\"conv2d/Relu:0\", shape=(246, 128, 128, 28), dtype=float32)\n",
+      "Tensor(\"max_pooling2d/MaxPool:0\", shape=(246, 64, 64, 28), dtype=float32)\n",
       "                          || ||                             \n",
       "                          \\\\ //                             \n",
       "                           \\ /                             \n",
-      "Tensor(\"conv2d_6/Relu:0\", shape=(246, 32, 32, 7), dtype=float32)\n",
-      "Tensor(\"max_pooling2d_6/MaxPool:0\", shape=(246, 16, 16, 7), dtype=float32)\n",
+      "Tensor(\"conv2d_2/Relu:0\", shape=(246, 64, 64, 24), dtype=float32)\n",
+      "Tensor(\"max_pooling2d_2/MaxPool:0\", shape=(246, 32, 32, 24), dtype=float32)\n",
       "                          || ||                             \n",
       "                          \\\\ //                             \n",
       "                           \\ /                             \n",
-      "Tensor(\"Reshape_3:0\", shape=(246, 1792), dtype=float32)\n",
+      "Tensor(\"conv2d_3/Relu:0\", shape=(246, 32, 32, 7), dtype=float32)\n",
+      "Tensor(\"max_pooling2d_3/MaxPool:0\", shape=(246, 16, 16, 7), dtype=float32)\n",
       "                          || ||                             \n",
       "                          \\\\ //                             \n",
       "                           \\ /                             \n",
-      "Tensor(\"dense_8/Relu:0\", shape=(246, 512), dtype=float32)\n",
-      "Tensor(\"dense_9/Relu:0\", shape=(246, 256), dtype=float32)\n",
-      "Tensor(\"dense_10/Relu:0\", shape=(246, 128), dtype=float32)\n",
-      "Tensor(\"dense_11/Relu:0\", shape=(246, 64), dtype=float32)\n",
-      "Tensor(\"dense_12/Relu:0\", shape=(246, 32), dtype=float32)\n",
-      "Tensor(\"dense_13/Relu:0\", shape=(246, 16), dtype=float32)\n",
-      "Tensor(\"dropout_2/Identity:0\", shape=(246, 16), dtype=float32)\n",
+      "Tensor(\"Reshape_2:0\", shape=(246, 1792), dtype=float32)\n",
       "                          || ||                             \n",
       "                          \\\\ //                             \n",
       "                           \\ /                             \n",
-      "Tensor(\"dense_14/BiasAdd:0\", shape=(246, 4), dtype=float32)\n"
+      "Tensor(\"dense/Relu:0\", shape=(246, 512), dtype=float32)\n",
+      "Tensor(\"dense_2/Relu:0\", shape=(246, 256), dtype=float32)\n",
+      "Tensor(\"dense_3/Relu:0\", shape=(246, 128), dtype=float32)\n",
+      "Tensor(\"dense_4/Relu:0\", shape=(246, 64), dtype=float32)\n",
+      "Tensor(\"dense_5/Relu:0\", shape=(246, 32), dtype=float32)\n",
+      "Tensor(\"dense_6/Relu:0\", shape=(246, 16), dtype=float32)\n",
+      "Tensor(\"dropout/Identity:0\", shape=(246, 16), dtype=float32)\n",
+      "                          || ||                             \n",
+      "                          \\\\ //                             \n",
+      "                           \\ /                             \n",
+      "Tensor(\"dense_7/BiasAdd:0\", shape=(246, 4), dtype=float32)\n"
      ]
     }
    ],
    "source": [
     "test_images[0]\n",
     "input_layer=tf.reshape(test_images, [-1,128,128,3])\n",
-    "input_layer\n",
+    "print(input_layer)    \n",
+    "print(\"                          || ||                             \")\n",
+    "print(\"                          \\\\\\ //                             \")\n",
+    "print(\"                           \\ /                             \")\n",
     "#Convolution layer #1\n",
     "#Convolution layer #1\n",
     "conv1 = tf.layers.conv2d(input_layer,filters=28,kernel_size=[5,5],padding=\"same\",activation=tf.nn.relu)\n",
